force-app/main/default/objects/Trade_Gov_Response__c/Trade_Gov_Response__c.object-meta.xml
<CustomObject>
    <label>Trade Gov Response</label>
    <nameField>
        <displayFormat>TGR-{0000}</displayFormat>
        <label>Trade Gov Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Gov Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>