force-app/main/default/objects/Trade_Gov_Response__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trade Gov Responses</relationshipLabel>
    <relationshipName>Trade_Gov_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>