force-app/main/default/objects/Trade_Gov_Response__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trade Gov Responses</relationshipLabel>
    <relationshipName>Trade_Gov_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>