force-app/main/default/objects/Trade_Gov_Response__c/fields/Entity_Names__c.field-meta.xml
<CustomField>
    <fullName>Entity_Names__c</fullName>
    <label>Entity Names</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>