force-app/main/default/objects/Trade_Gov_Response__c/fields/Ids__c.field-meta.xml
<CustomField>
    <fullName>Ids__c</fullName>
    <label>Ids</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>