force-app/main/default/objects/Trade_Gov_Response__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>