force-app/main/default/objects/Trade_Gov_Response__c/fields/Source_List_URLs__c.field-meta.xml
<CustomField>
    <fullName>Source_List_URLs__c</fullName>
    <label>Source List URLs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>